--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ElectroPanel Pro - Professional Electrical Panel Solutions</title>
     <link rel="stylesheet" href="css/main.css" />
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "ElectroPanel Pro - Behsaz Tablo Asia",
+        "alternateName": "بهساز تابلو آسیا",
+        "url": "https://electropanelpro.com",
+        "logo": "https://electropanelpro.com/assets/images/logo.webp",
+        "description": "Professional electrical panel solutions and industrial electrical panel manufacturing with 25+ years experience",
+        "foundingDate": "1998",
+        "address": {
+            "@type": "PostalAddress",
+            "addressCountry": "IR",
+            "addressRegion": "Iran"
+        },
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "contactType": "customer service",
+            "availableLanguage": ["Persian", "English"]
+        },
+        "sameAs": [
+            "https://electropanelpro.com"
+        ],
+        "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "https://electropanelpro.com/"
+        }
+    }
+    </script>
     <script>
         // Redirect to homepage after a brief moment
         setTimeout(function() {
