--- a/pages/404.html
+++ b/pages/404.html
@@ -5,6 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>صفحه مورد نظر یافت نشد (404) - بهساز تابلو آسیا</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "@id": "https://electropanelpro.com/pages/404.html",
+        "url": "https://electropanelpro.com/pages/404.html",
+        "name": "صفحه مورد نظر یافت نشد (404) - بهساز تابلو آسیا",
+        "description": "متأسفانه صفحه مورد نظر شما یافت نشد. به صفحه اصلی بازگردید",
+        "isPartOf": {
+            "@type": "WebSite",
+            "@id": "https://electropanelpro.com/#website"
+        },
+        "mainEntity": {
+            "@type": "Organization",
+            "name": "ElectroPanel Pro - Behsaz Tablo Asia",
+            "alternateName": "بهساز تابلو آسیا"
+        },
+        "datePublished": "2024-01-01",
+        "dateModified": "2025-01-20"
+    }
+    </script>
     <link rel="stylesheet" href="../css/main.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
