--- a/pages/about_capabilities.html
+++ b/pages/about_capabilities.html
@@ -8,6 +8,153 @@
         <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
         <meta name="description"
             content="Discover ElectroPanel Pro's 25+ years of electrical engineering excellence. Tour our facilities, meet our expert team, and explore our comprehensive manufacturing capabilities." />
+        
+        <!-- JSON-LD Structured Data -->
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@graph": [
+                {
+                    "@type": "Organization",
+                    "@id": "https://electropanelpro.com/#organization",
+                    "name": "ElectroPanel Pro - Behsaz Tablo Asia",
+                    "alternateName": "بهساز تابلو آسیا",
+                    "url": "https://electropanelpro.com",
+                    "logo": {
+                        "@type": "ImageObject",
+                        "url": "https://electropanelpro.com/assets/images/logo.webp"
+                    },
+                    "description": "25+ years of electrical engineering excellence with comprehensive manufacturing capabilities",
+                    "foundingDate": "1998",
+                    "numberOfEmployees": {
+                        "@type": "QuantitativeValue",
+                        "value": "50-100"
+                    },
+                    "address": {
+                        "@type": "PostalAddress",
+                        "addressCountry": "IR",
+                        "addressRegion": "Iran"
+                    },
+                    "contactPoint": {
+                        "@type": "ContactPoint",
+                        "contactType": "customer service",
+                        "availableLanguage": ["Persian", "English"]
+                    },
+                    "hasCredential": [
+                        {
+                            "@type": "EducationalOccupationalCredential",
+                            "name": "ISO 9001:2015 Quality Management",
+                            "credentialCategory": "certification"
+                        },
+                        {
+                            "@type": "EducationalOccupationalCredential",
+                            "name": "IEC Standards Compliance",
+                            "credentialCategory": "certification"
+                        }
+                    ],
+                    "knowsAbout": [
+                        "Electrical Panel Manufacturing",
+                        "Low Voltage Switchgear",
+                        "Medium Voltage Systems",
+                        "Industrial Automation",
+                        "Power Distribution",
+                        "Electrical Engineering"
+                    ],
+                    "memberOf": {
+                        "@type": "Organization",
+                        "name": "Iranian Electrical Industry Association"
+                    }
+                },
+                {
+                    "@type": "AboutPage",
+                    "@id": "https://electropanelpro.com/pages/about_capabilities.html",
+                    "url": "https://electropanelpro.com/pages/about_capabilities.html",
+                    "name": "About ElectroPanel Pro - Engineering Excellence & Manufacturing Capabilities",
+                    "description": "Discover ElectroPanel Pro's 25+ years of electrical engineering excellence. Tour our facilities, meet our expert team, and explore our comprehensive manufacturing capabilities.",
+                    "isPartOf": {
+                        "@type": "WebSite",
+                        "@id": "https://electropanelpro.com/#website"
+                    },
+                    "about": {
+                        "@id": "https://electropanelpro.com/#organization"
+                    },
+                    "mainEntity": {
+                        "@id": "https://electropanelpro.com/#organization"
+                    },
+                    "datePublished": "2024-01-01",
+                    "dateModified": "2025-01-20",
+                    "breadcrumb": {
+                        "@type": "BreadcrumbList",
+                        "itemListElement": [
+                            {
+                                "@type": "ListItem",
+                                "position": 1,
+                                "name": "خانه",
+                                "item": "https://electropanelpro.com/pages/homepage.html"
+                            },
+                            {
+                                "@type": "ListItem",
+                                "position": 2,
+                                "name": "درباره ما",
+                                "item": "https://electropanelpro.com/pages/about_capabilities.html"
+                            }
+                        ]
+                    }
+                },
+                {
+                    "@type": "Service",
+                    "@id": "https://electropanelpro.com/#engineering-services",
+                    "name": "Electrical Engineering Services",
+                    "description": "Comprehensive electrical engineering and manufacturing capabilities with 25+ years experience",
+                    "provider": {
+                        "@id": "https://electropanelpro.com/#organization"
+                    },
+                    "serviceType": "Electrical Engineering",
+                    "areaServed": {
+                        "@type": "Country",
+                        "name": "Iran"
+                    },
+                    "hasOfferCatalog": {
+                        "@type": "OfferCatalog",
+                        "name": "Engineering Capabilities",
+                        "itemListElement": [
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Design Engineering",
+                                    "description": "Custom electrical panel design and engineering"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Manufacturing",
+                                    "description": "Precision electrical panel manufacturing"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Quality Assurance",
+                                    "description": "Comprehensive testing and quality control"
+                                }
+                            }
+                        ]
+                    }
+                },
+                {
+                    "@type": "ImageObject",
+                    "@id": "https://electropanelpro.com/assets/images/about-us.webp",
+                    "url": "https://electropanelpro.com/assets/images/about-us.webp",
+                    "caption": "Engineer working on an electrical panel",
+                    "description": "Professional electrical engineer working on industrial electrical panel"
+                }
+            ]
+        }
+        </script>
         <link rel="stylesheet" href="../css/main.css" />
         <script type="module"
             src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Felectropan3871back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script>
