--- a/pages/custom_panel_design.html
+++ b/pages/custom_panel_design.html
@@ -8,6 +8,131 @@
         <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
         <meta name="description"
             content="Custom electrical panel design services from ElectroPanel Pro. Interactive configurator, expert engineering team, and comprehensive design process for mission-critical applications." />
+        
+        <!-- JSON-LD Structured Data -->
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@graph": [
+                {
+                    "@type": "Service",
+                    "@id": "https://electropanelpro.com/pages/custom_panel_design.html#custom-design-service",
+                    "name": "Custom Electrical Panel Design",
+                    "description": "Precision-engineered custom electrical panel design services for mission-critical applications",
+                    "provider": {
+                        "@type": "Organization",
+                        "name": "ElectroPanel Pro - Behsaz Tablo Asia",
+                        "alternateName": "بهساز تابلو آسیا"
+                    },
+                    "serviceType": "Electrical Engineering Design",
+                    "areaServed": {
+                        "@type": "Country",
+                        "name": "Iran"
+                    },
+                    "hasOfferCatalog": {
+                        "@type": "OfferCatalog",
+                        "name": "Custom Design Services",
+                        "itemListElement": [
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "تحلیل نیازمندی‌ها",
+                                    "description": "Comprehensive requirements analysis for custom electrical panels"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "طراحی مهندسی",
+                                    "description": "3D modeling, load calculations, and compliance verification"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "پروتوتایپ و تستینگ",
+                                    "description": "Factory testing and quality assurance"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "ساخت و تولید",
+                                    "description": "Precision assembly with certified components"
+                                }
+                            }
+                        ]
+                    }
+                },
+                {
+                    "@type": "WebPage",
+                    "@id": "https://electropanelpro.com/pages/custom_panel_design.html",
+                    "url": "https://electropanelpro.com/pages/custom_panel_design.html",
+                    "name": "Custom Panel Design - ElectroPanel Pro | Precision-Engineered Electrical Solutions",
+                    "description": "Custom electrical panel design services from ElectroPanel Pro. Interactive configurator, expert engineering team, and comprehensive design process for mission-critical applications.",
+                    "isPartOf": {
+                        "@type": "WebSite",
+                        "@id": "https://electropanelpro.com/#website"
+                    },
+                    "datePublished": "2024-01-01",
+                    "dateModified": "2025-01-20",
+                    "breadcrumb": {
+                        "@type": "BreadcrumbList",
+                        "itemListElement": [
+                            {
+                                "@type": "ListItem",
+                                "position": 1,
+                                "name": "خانه",
+                                "item": "https://electropanelpro.com/pages/homepage.html"
+                            },
+                            {
+                                "@type": "ListItem",
+                                "position": 2,
+                                "name": "گواهینامه ها",
+                                "item": "https://electropanelpro.com/pages/custom_panel_design.html"
+                            }
+                        ]
+                    }
+                },
+                {
+                    "@type": "HowTo",
+                    "@id": "https://electropanelpro.com/pages/custom_panel_design.html#design-process",
+                    "name": "Custom Electrical Panel Design Process",
+                    "description": "5-step process for custom electrical panel design and manufacturing",
+                    "step": [
+                        {
+                            "@type": "HowToStep",
+                            "position": 1,
+                            "name": "تحلیل نیازمندی‌ها",
+                            "text": "Comprehensive review of electrical loads, environmental conditions, and operational constraints"
+                        },
+                        {
+                            "@type": "HowToStep",
+                            "position": 2,
+                            "name": "طراحی مهندسی",
+                            "text": "3D modeling, load calculations, and compliance verification with industry standards"
+                        },
+                        {
+                            "@type": "HowToStep",
+                            "position": 3,
+                            "name": "پروتوتایپ و تستینگ",
+                            "text": "Factory testing and quality assurance before shipment to your facility"
+                        },
+                        {
+                            "@type": "HowToStep",
+                            "position": 4,
+                            "name": "ساخت و تولید",
+                            "text": "Precision assembly using certified components and rigorous quality control"
+                        }
+                    ]
+                }
+            ]
+        }
+        </script>
         <link rel="stylesheet" href="../css/main.css" />
         <script type="module"
             src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Felectropan3871back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script>
