--- a/pages/gachsaran.html
+++ b/pages/gachsaran.html
@@ -5,6 +5,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>جزئیات پروژه: پالایشگاه نفت - بهساز تابلو آسیا</title>
     <meta name="description" content="بررسی دقیق پروژه ارتقاء سیستم برق اضطراری در پالایشگاه نفت، شامل چالش‌ها، راه‌حل‌های مهندسی و نتایج به دست آمده." />
+    
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@graph": [
+            {
+                "@type": "Article",
+                "@id": "https://electropanelpro.com/pages/gachsaran.html",
+                "url": "https://electropanelpro.com/pages/gachsaran.html",
+                "headline": "پروژه نفت و گاز گچساران",
+                "alternativeHeadline": "Gachsaran Oil and Gas Project",
+                "description": "بررسی دقیق پروژه ارتقاء سیستم برق اضطراری در پالایشگاه نفت",
+                "author": {
+                    "@type": "Organization",
+                    "name": "ElectroPanel Pro - Behsaz Tablo Asia",
+                    "alternateName": "بهساز تابلو آسیا"
+                },
+                "publisher": {
+                    "@type": "Organization",
+                    "name": "ElectroPanel Pro - Behsaz Tablo Asia",
+                    "logo": {
+                        "@type": "ImageObject",
+                        "url": "https://electropanelpro.com/assets/images/logo.webp"
+                    }
+                },
+                "datePublished": "2023-01-01",
+                "dateModified": "2025-01-20",
+                "articleSection": "Case Studies",
+                "keywords": "نفت و گاز, پالایشگاه, برق اضطراری, تابلو برق, گچساران",
+                "about": {
+                    "@type": "Thing",
+                    "name": "Oil Refinery Electrical System Upgrade",
+                    "description": "Emergency electrical system upgrade project for oil refinery operations"
+                },
+                "mainEntityOfPage": {
+                    "@type": "WebPage",
+                    "@id": "https://electropanelpro.com/pages/gachsaran.html"
+                },
+                "image": {
+                    "@type": "ImageObject",
+                    "url": "https://electropanelpro.com/assets/images/gachsaran.webp",
+                    "caption": "پالایشگاه نفت"
+                },
+                "breadcrumb": {
+                    "@type": "BreadcrumbList",
+                    "itemListElement": [
+                        {
+                            "@type": "ListItem",
+                            "position": 1,
+                            "name": "خانه",
+                            "item": "https://electropanelpro.com/pages/homepage.html"
+                        },
+                        {
+                            "@type": "ListItem",
+                            "position": 2,
+                            "name": "پروژه ها",
+                            "item": "https://electropanelpro.com/pages/project_portfolio.html"
+                        },
+                        {
+                            "@type": "ListItem",
+                            "position": 3,
+                            "name": "پروژه گچساران",
+                            "item": "https://electropanelpro.com/pages/gachsaran.html"
+                        }
+                    ]
+                }
+            },
+            {
+                "@type": "CreativeWork",
+                "@id": "https://electropanelpro.com/pages/gachsaran.html#project-case-study",
+                "name": "Gachsaran Oil Refinery Electrical Upgrade",
+                "description": "Case study of emergency electrical system upgrade in critical oil refinery operations",
+                "creator": {
+                    "@type": "Organization",
+                    "name": "ElectroPanel Pro - Behsaz Tablo Asia"
+                },
+                "genre": "Case Study",
+                "workExample": {
+                    "@type": "CreativeWork",
+                    "name": "Emergency Power System Installation",
+                    "description": "Critical electrical panel installation without operational downtime"
+                },
+                "about": {
+                    "@type": "Thing",
+                    "name": "Oil and Gas Infrastructure",
+                    "description": "Critical electrical infrastructure for oil and gas operations"
+                }
+            }
+        ]
+    }
+    </script>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
@@ -175,7 +267,7 @@
         <!-- Project Hero Section -->
         <section class="relative py-20 lg:py-32">
             <div class="absolute inset-0">
-                <img src="../assets/images/zarafshan.webp" alt="پالایشگاه نفت" class="w-full h-full object-cover">
+                <img src="../assets/images/gachsaran.webp" alt="پالایشگاه نفت" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-gray-800 bg-opacity-75"></div>
             </div>
             <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-white">
@@ -183,7 +275,7 @@
                     <span class="bg-primary text-white px-4 py-1 rounded-full text-sm font-sans font-semibold">نفت و گاز</span>
                     <span class="bg-error text-white px-4 py-1 rounded-full text-sm font-sans font-semibold">اضطراری</span>
                 </div>
-                <h1 class="text-hero font-sans text-white font-bold mb-4">پروژه پالایشگاه نفت</h1>
+                <h1 class="text-hero font-sans text-white font-bold mb-4">پروژه نفت و گاز گچساران</h1>
                 <p class="text-2xl opacity-90 max-w-3xl mx-auto">ارتقاء سیستم برق اضطراری در شرایط بحرانی بدون وقفه در فعالیت‌های حیاتی</p>
             </div>
         </section>
