--- a/pages/products.html
+++ b/pages/products.html
@@ -7,6 +7,195 @@
             متوسط</title>
         <meta name="description"
             content="مجموعه کامل تابلوهای برق فشار ضعیف، فشار متوسط، کامپکت و راه‌حل‌های کنترلی سفارشی ما را مشاهده کنید. مهندسی شده برای اطمینان و ایمنی." />
+        
+        <!-- JSON-LD Structured Data -->
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@graph": [
+                {
+                    "@type": "Organization",
+                    "@id": "https://electropanelpro.com/#organization",
+                    "name": "ElectroPanel Pro - Behsaz Tablo Asia",
+                    "alternateName": "بهساز تابلو آسیا",
+                    "url": "https://electropanelpro.com"
+                },
+                {
+                    "@type": "CollectionPage",
+                    "@id": "https://electropanelpro.com/pages/products.html",
+                    "url": "https://electropanelpro.com/pages/products.html",
+                    "name": "محصولات ما - بهساز تابلو آسیا | تابلو برق فشار ضعیف و متوسط",
+                    "description": "مجموعه کامل تابلوهای برق فشار ضعیف، فشار متوسط، کامپکت و راه‌حل‌های کنترلی سفارشی",
+                    "isPartOf": {
+                        "@type": "WebSite",
+                        "@id": "https://electropanelpro.com/#website"
+                    },
+                    "about": {
+                        "@id": "https://electropanelpro.com/#organization"
+                    },
+                    "datePublished": "2024-01-01",
+                    "dateModified": "2025-01-20",
+                    "breadcrumb": {
+                        "@type": "BreadcrumbList",
+                        "itemListElement": [
+                            {
+                                "@type": "ListItem",
+                                "position": 1,
+                                "name": "خانه",
+                                "item": "https://electropanelpro.com/pages/homepage.html"
+                            },
+                            {
+                                "@type": "ListItem",
+                                "position": 2,
+                                "name": "محصولات",
+                                "item": "https://electropanelpro.com/pages/products.html"
+                            }
+                        ]
+                    },
+                    "hasPart": [
+                        {
+                            "@type": "Product",
+                            "@id": "https://electropanelpro.com/pages/products.html#product-lv-withdrawable",
+                            "name": "Low Voltage Switchgear Withdrawable",
+                            "alternateName": "تابلو فشار ضعیف جداشدنی",
+                            "description": "Professional low voltage withdrawable switchgear for industrial applications",
+                            "category": "Electrical Equipment",
+                            "manufacturer": {
+                                "@id": "https://electropanelpro.com/#organization"
+                            },
+                            "brand": {
+                                "@type": "Brand",
+                                "name": "Behsaz Tablo Asia"
+                            },
+                            "offers": {
+                                "@type": "Offer",
+                                "availability": "https://schema.org/InStock",
+                                "priceValidUntil": "2025-12-31",
+                                "seller": {
+                                    "@id": "https://electropanelpro.com/#organization"
+                                }
+                            }
+                        },
+                        {
+                            "@type": "Product",
+                            "@id": "https://electropanelpro.com/pages/products.html#product-lv-fixed",
+                            "name": "Low Voltage Switchgear Fixed",
+                            "alternateName": "تابلو فشار ضعیف ثابت",
+                            "description": "Fixed low voltage switchgear solutions for reliable power distribution",
+                            "category": "Electrical Equipment",
+                            "manufacturer": {
+                                "@id": "https://electropanelpro.com/#organization"
+                            },
+                            "brand": {
+                                "@type": "Brand",
+                                "name": "Behsaz Tablo Asia"
+                            },
+                            "offers": {
+                                "@type": "Offer",
+                                "availability": "https://schema.org/InStock",
+                                "priceValidUntil": "2025-12-31",
+                                "seller": {
+                                    "@id": "https://electropanelpro.com/#organization"
+                                }
+                            }
+                        },
+                        {
+                            "@type": "Product",
+                            "@id": "https://electropanelpro.com/pages/products.html#product-mv-withdrawable",
+                            "name": "Medium Voltage Switchgear Withdrawable",
+                            "alternateName": "تابلو فشار متوسط جداشدنی",
+                            "description": "Advanced medium voltage withdrawable switchgear for industrial power systems",
+                            "category": "Electrical Equipment",
+                            "manufacturer": {
+                                "@id": "https://electropanelpro.com/#organization"
+                            },
+                            "brand": {
+                                "@type": "Brand",
+                                "name": "Behsaz Tablo Asia"
+                            },
+                            "offers": {
+                                "@type": "Offer",
+                                "availability": "https://schema.org/InStock",
+                                "priceValidUntil": "2025-12-31",
+                                "seller": {
+                                    "@id": "https://electropanelpro.com/#organization"
+                                }
+                            }
+                        },
+                        {
+                            "@type": "Product",
+                            "@id": "https://electropanelpro.com/pages/products.html#product-mv-unisafe",
+                            "name": "Medium Voltage Switchgear Unisafe",
+                            "alternateName": "تابلو فشار متوسط ایمن",
+                            "description": "Safe and reliable medium voltage switchgear with advanced protection systems",
+                            "category": "Electrical Equipment",
+                            "manufacturer": {
+                                "@id": "https://electropanelpro.com/#organization"
+                            },
+                            "brand": {
+                                "@type": "Brand",
+                                "name": "Behsaz Tablo Asia"
+                            },
+                            "offers": {
+                                "@type": "Offer",
+                                "availability": "https://schema.org/InStock",
+                                "priceValidUntil": "2025-12-31",
+                                "seller": {
+                                    "@id": "https://electropanelpro.com/#organization"
+                                }
+                            }
+                        },
+                        {
+                            "@type": "Product",
+                            "@id": "https://electropanelpro.com/pages/products.html#product-kiosk-post",
+                            "name": "Kiosk Post Solutions",
+                            "alternateName": "پست کیوسک",
+                            "description": "Custom electrical kiosk and post installations for outdoor applications",
+                            "category": "Electrical Equipment",
+                            "manufacturer": {
+                                "@id": "https://electropanelpro.com/#organization"
+                            },
+                            "brand": {
+                                "@type": "Brand",
+                                "name": "Behsaz Tablo Asia"
+                            },
+                            "offers": {
+                                "@type": "Offer",
+                                "availability": "https://schema.org/InStock",
+                                "priceValidUntil": "2025-12-31",
+                                "seller": {
+                                    "@id": "https://electropanelpro.com/#organization"
+                                }
+                            }
+                        },
+                        {
+                            "@type": "Product",
+                            "@id": "https://electropanelpro.com/pages/products.html#product-compact",
+                            "name": "Compact Electrical Solutions",
+                            "alternateName": "راهکارهای فشرده",
+                            "description": "Space-efficient compact electrical panel solutions",
+                            "category": "Electrical Equipment",
+                            "manufacturer": {
+                                "@id": "https://electropanelpro.com/#organization"
+                            },
+                            "brand": {
+                                "@type": "Brand",
+                                "name": "Behsaz Tablo Asia"
+                            },
+                            "offers": {
+                                "@type": "Offer",
+                                "availability": "https://schema.org/InStock",
+                                "priceValidUntil": "2025-12-31",
+                                "seller": {
+                                    "@id": "https://electropanelpro.com/#organization"
+                                }
+                            }
+                        }
+                    ]
+                }
+            ]
+        }
+        </script>
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="icon" type="image/x-icon" href="/favicon.ico">
     </head>
