--- a/pages/contact_quote_request.html
+++ b/pages/contact_quote_request.html
@@ -8,6 +8,171 @@
         <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
         <meta name="description"
             content="Get custom electrical panel quotes and emergency support from ElectroPanel Pro. 24/7 response, regional coverage, expert consultation. Request quote today." />
+        
+        <!-- JSON-LD Structured Data -->
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@graph": [
+                {
+                    "@type": "LocalBusiness",
+                    "@id": "https://electropanelpro.com/#localbusiness",
+                    "name": "ElectroPanel Pro - Behsaz Tablo Asia",
+                    "alternateName": "بهساز تابلو آسیا",
+                    "url": "https://electropanelpro.com",
+                    "logo": {
+                        "@type": "ImageObject",
+                        "url": "https://electropanelpro.com/assets/images/logo.webp"
+                    },
+                    "description": "Professional electrical panel manufacturing and emergency support services with 24/7 response",
+                    "address": {
+                        "@type": "PostalAddress",
+                        "addressCountry": "IR",
+                        "addressRegion": "Iran"
+                    },
+                    "geo": {
+                        "@type": "GeoCoordinates",
+                        "latitude": "35.6892",
+                        "longitude": "51.3890"
+                    },
+                    "contactPoint": [
+                        {
+                            "@type": "ContactPoint",
+                            "contactType": "customer service",
+                            "availableLanguage": ["Persian", "English"],
+                            "hoursAvailable": {
+                                "@type": "OpeningHoursSpecification",
+                                "dayOfWeek": [
+                                    "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"
+                                ],
+                                "opens": "00:00",
+                                "closes": "23:59"
+                            }
+                        },
+                        {
+                            "@type": "ContactPoint",
+                            "contactType": "emergency",
+                            "availableLanguage": ["Persian", "English"],
+                            "hoursAvailable": {
+                                "@type": "OpeningHoursSpecification",
+                                "dayOfWeek": [
+                                    "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"
+                                ],
+                                "opens": "00:00",
+                                "closes": "23:59"
+                            }
+                        },
+                        {
+                            "@type": "ContactPoint",
+                            "contactType": "sales",
+                            "availableLanguage": ["Persian", "English"]
+                        }
+                    ],
+                    "openingHours": "Mo-Su 00:00-23:59",
+                    "priceRange": "$$$",
+                    "paymentAccepted": ["Cash", "Credit Card", "Bank Transfer"],
+                    "currenciesAccepted": "IRR",
+                    "areaServed": {
+                        "@type": "Country",
+                        "name": "Iran"
+                    },
+                    "hasOfferCatalog": {
+                        "@type": "OfferCatalog",
+                        "name": "Electrical Panel Services",
+                        "itemListElement": [
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "24/7 Emergency Support",
+                                    "description": "Round-the-clock emergency electrical panel support and repair services"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Custom Quote Request",
+                                    "description": "Personalized electrical panel design and manufacturing quotes"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Expert Consultation",
+                                    "description": "Professional electrical engineering consultation services"
+                                }
+                            }
+                        ]
+                    }
+                },
+                {
+                    "@type": "ContactPage",
+                    "@id": "https://electropanelpro.com/pages/contact_quote_request.html",
+                    "url": "https://electropanelpro.com/pages/contact_quote_request.html",
+                    "name": "Contact & Quote Request - ElectroPanel Pro | 24/7 Emergency Support",
+                    "description": "Get custom electrical panel quotes and emergency support from ElectroPanel Pro. 24/7 response, regional coverage, expert consultation. Request quote today.",
+                    "isPartOf": {
+                        "@type": "WebSite",
+                        "@id": "https://electropanelpro.com/#website"
+                    },
+                    "about": {
+                        "@id": "https://electropanelpro.com/#localbusiness"
+                    },
+                    "mainEntity": {
+                        "@id": "https://electropanelpro.com/#localbusiness"
+                    },
+                    "datePublished": "2024-01-01",
+                    "dateModified": "2025-01-20",
+                    "breadcrumb": {
+                        "@type": "BreadcrumbList",
+                        "itemListElement": [
+                            {
+                                "@type": "ListItem",
+                                "position": 1,
+                                "name": "خانه",
+                                "item": "https://electropanelpro.com/pages/homepage.html"
+                            },
+                            {
+                                "@type": "ListItem",
+                                "position": 2,
+                                "name": "ارتباط با ما",
+                                "item": "https://electropanelpro.com/pages/contact_quote_request.html"
+                            }
+                        ]
+                    }
+                },
+                {
+                    "@type": "Service",
+                    "@id": "https://electropanelpro.com/#emergency-support",
+                    "name": "24/7 Emergency Electrical Support",
+                    "description": "Round-the-clock emergency electrical panel support and repair services with rapid response",
+                    "provider": {
+                        "@id": "https://electropanelpro.com/#localbusiness"
+                    },
+                    "serviceType": "Emergency Electrical Services",
+                    "areaServed": {
+                        "@type": "Country",
+                        "name": "Iran"
+                    },
+                    "hoursAvailable": {
+                        "@type": "OpeningHoursSpecification",
+                        "dayOfWeek": [
+                            "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"
+                        ],
+                        "opens": "00:00",
+                        "closes": "23:59"
+                    },
+                    "offers": {
+                        "@type": "Offer",
+                        "availability": "https://schema.org/InStock",
+                        "priceValidUntil": "2025-12-31"
+                    }
+                }
+            ]
+        }
+        </script>
         <link rel="stylesheet" href="../css/main.css" />
         <script type="module"
             src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Felectropan3871back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script>
