--- a/pages/project_portfolio.html
+++ b/pages/project_portfolio.html
@@ -8,6 +8,184 @@
         <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
         <meta name="description"
             content="Explore ElectroPanel Pro's comprehensive project portfolio featuring 500+ successful installations across healthcare, manufacturing, data centers, and commercial facilities." />
+        
+        <!-- JSON-LD Structured Data -->
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@graph": [
+                {
+                    "@type": "Organization",
+                    "@id": "https://electropanelpro.com/#organization",
+                    "name": "ElectroPanel Pro - Behsaz Tablo Asia",
+                    "alternateName": "بهساز تابلو آسیا",
+                    "url": "https://electropanelpro.com"
+                },
+                {
+                    "@type": "CollectionPage",
+                    "@id": "https://electropanelpro.com/pages/project_portfolio.html",
+                    "url": "https://electropanelpro.com/pages/project_portfolio.html",
+                    "name": "Project Portfolio - ElectroPanel Pro | Industrial Electrical Panel Manufacturing",
+                    "description": "Explore ElectroPanel Pro's comprehensive project portfolio featuring 500+ successful installations across healthcare, manufacturing, data centers, and commercial facilities.",
+                    "isPartOf": {
+                        "@type": "WebSite",
+                        "@id": "https://electropanelpro.com/#website"
+                    },
+                    "about": {
+                        "@id": "https://electropanelpro.com/#organization"
+                    },
+                    "datePublished": "2024-01-01",
+                    "dateModified": "2025-01-20",
+                    "breadcrumb": {
+                        "@type": "BreadcrumbList",
+                        "itemListElement": [
+                            {
+                                "@type": "ListItem",
+                                "position": 1,
+                                "name": "خانه",
+                                "item": "https://electropanelpro.com/pages/homepage.html"
+                            },
+                            {
+                                "@type": "ListItem",
+                                "position": 2,
+                                "name": "پروژه ها",
+                                "item": "https://electropanelpro.com/pages/project_portfolio.html"
+                            }
+                        ]
+                    },
+                    "hasPart": [
+                        {
+                            "@type": "CreativeWork",
+                            "@id": "https://electropanelpro.com/pages/project_portfolio.html#project-abadan-power-plant",
+                            "name": "پروژه نیروگاه آبادان",
+                            "alternateName": "Abadan Power Plant Project",
+                            "description": "Low-Voltage Sivacon and Medium-Voltage Kiosk 33KV installation for Abadan Power Plant",
+                            "creator": {
+                                "@id": "https://electropanelpro.com/#organization"
+                            },
+                            "dateCreated": "2023",
+                            "genre": "Industrial Project",
+                            "keywords": "power plant, electrical panels, low voltage, medium voltage, sivacon, kiosk",
+                            "workExample": {
+                                "@type": "CreativeWork",
+                                "name": "Electrical Panel Installation",
+                                "description": "Complete electrical panel system for power generation facility"
+                            }
+                        },
+                        {
+                            "@type": "CreativeWork",
+                            "@id": "https://electropanelpro.com/pages/project_portfolio.html#project-oil-gas",
+                            "name": "پروژه‌های نفت و گاز",
+                            "alternateName": "Oil and Gas Projects",
+                            "description": "Comprehensive electrical panel solutions for oil and gas industry facilities",
+                            "creator": {
+                                "@id": "https://electropanelpro.com/#organization"
+                            },
+                            "genre": "Oil & Gas Industrial Projects",
+                            "keywords": "oil and gas, petrochemical, electrical panels, industrial automation",
+                            "about": {
+                                "@type": "Thing",
+                                "name": "Oil and Gas Electrical Infrastructure"
+                            }
+                        },
+                        {
+                            "@type": "CreativeWork",
+                            "@id": "https://electropanelpro.com/pages/project_portfolio.html#project-industrial",
+                            "name": "پروژه‌های صنعتی",
+                            "alternateName": "Industrial Projects",
+                            "description": "Large-scale industrial electrical panel installations for manufacturing and processing facilities",
+                            "creator": {
+                                "@id": "https://electropanelpro.com/#organization"
+                            },
+                            "genre": "Industrial Manufacturing Projects",
+                            "keywords": "industrial, manufacturing, electrical panels, automation, processing",
+                            "about": {
+                                "@type": "Thing",
+                                "name": "Industrial Electrical Infrastructure"
+                            }
+                        }
+                    ],
+                    "numberOfItems": "500+"
+                },
+                {
+                    "@type": "Service",
+                    "@id": "https://electropanelpro.com/#project-management",
+                    "name": "Electrical Panel Project Management",
+                    "description": "Complete project management services for large-scale electrical panel installations",
+                    "provider": {
+                        "@id": "https://electropanelpro.com/#organization"
+                    },
+                    "serviceType": "Project Management",
+                    "areaServed": {
+                        "@type": "Country",
+                        "name": "Iran"
+                    },
+                    "hasOfferCatalog": {
+                        "@type": "OfferCatalog",
+                        "name": "Project Services",
+                        "itemListElement": [
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Design & Engineering",
+                                    "description": "Custom electrical panel design and engineering services"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Manufacturing & Assembly",
+                                    "description": "Precision manufacturing and assembly of electrical panels"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Installation & Commissioning",
+                                    "description": "Professional installation and commissioning services"
+                                }
+                            }
+                        ]
+                    }
+                },
+                {
+                    "@type": "ItemList",
+                    "@id": "https://electropanelpro.com/pages/project_portfolio.html#project-statistics",
+                    "name": "Project Portfolio Statistics",
+                    "description": "Key statistics and achievements from our project portfolio",
+                    "itemListElement": [
+                        {
+                            "@type": "ListItem",
+                            "position": 1,
+                            "name": "Total Projects Completed",
+                            "description": "Over 1000 successful electrical panel projects"
+                        },
+                        {
+                            "@type": "ListItem",
+                            "position": 2,
+                            "name": "Years of Experience",
+                            "description": "25+ years in electrical panel manufacturing and engineering"
+                        },
+                        {
+                            "@type": "ListItem",
+                            "position": 3,
+                            "name": "Safety Record",
+                            "description": "Zero safety incidents across all projects"
+                        },
+                        {
+                            "@type": "ListItem",
+                            "position": 4,
+                            "name": "Industry Coverage",
+                            "description": "Oil & Gas, Petrochemical, Power Generation, Manufacturing"
+                        }
+                    ]
+                }
+            ]
+        }
+        </script>
         <link rel="stylesheet" href="../css/main.css" />
         <script type="module"
             src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Felectropan3871back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script>
@@ -407,7 +585,7 @@
                         پروژه‌ها</h2>
                     <p
                         class="text-body-lg text-secondary-600 max-w-3xl mx-auto">آرشیو
-                        کامل ما از نصب تابلوهای برق در صنایع و کاربردهای متنوع
+                        کامل ما از تولید تابلوهای برق در صنایع و کاربردهای متنوع
                         را مرور کنید.</p>
                 </div>
 
@@ -463,7 +641,7 @@
                             <span>پایداری ۹۹.۹۹٪</span>
                         </div>
                         <div class="border-t border-secondary-200 pt-4">
-                            <a href="project.html"
+                            <a href="gachsaran.html"
                                 class="text-accent font-sans font-semibold hover:text-accent-700 transition-colors">
                                 مشاهده مشخصات →
                             </a>
@@ -510,11 +688,10 @@
                             <span>تحویل شش ماهه</span>
                             <span>بدون وقفه</div>
                             <div class="border-t border-secondary-200 pt-4">
-                                <button
-                                    onclick="toggleProjectSpecs('project-2')"
-                                    class="text-accent font-sans font-semibold hover:text-accent-700 transition-colors">
-                                    مشاهده مشخصات →
-                                </button>
+                                <a href="jofeir.html"
+                                class="text-accent font-sans font-semibold hover:text-accent-700 transition-colors">
+                                مشاهده مشخصات →
+                            </a>
                                 <div id="project-2"
                                     class="hidden mt-4 space-y-2 text-right">
                                     <div class="bg-surface rounded p-3">
@@ -549,7 +726,7 @@
                                     class="absolute top-4 left-4 bg-success text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">سفارشی</div>
                             </div>
                             <h3
-                                class="text-heading font-sans font-bold text-primary mb-3">ستاره
+                                class="text-heading font-sans font-bold text-primary mb-3">نفت ستاره
                                 خلیج فارس</h3>
                             <p class="text-secondary-600 mb-4 flex-grow">ساخت،
                                 تولید و نصب تابلوهای فشار ضعیف سیواکن 8PT دوهزار
@@ -590,21 +767,17 @@
                             data-service="emergency">
                             <div
                                 class="relative overflow-hidden rounded-lg mb-6">
-                                <img src="../assets/images/apply-bg.jpg"
+                                <img src="../assets/images/bank-khavarmiane.webp"
                                     alt="پروژه پالایشگاه نفت"
                                     class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
                                 <div
-                                    class="absolute top-4 right-4 bg-primary text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">نفت
-                                    و گاز</div>
+                                    class="absolute top-4 right-4 bg-primary text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">عمرانی</div>
                                 <div
-                                    class="absolute top-4 left-4 bg-error text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">اضطراری</div>
+                                    class="absolute top-4 left-4 bg-error text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">سفارشی</div>
                             </div>
                             <h3
-                                class="text-heading font-sans font-bold text-primary mb-3">پالایشگاه
-                                نفت</h3>
-                            <p class="text-secondary-600 mb-4 flex-grow">ارتقاء
-                                سیستم برق اضطراری در شرایط بحرانی بدون هیچ‌گونه
-                                وقفه در فعالیت‌های حیاتی پالایشگاه.</p>
+                                class="text-heading font-sans font-bold text-primary mb-3">بانک خاورمیانه</h3>
+                            <p class="text-secondary-600 mb-4 flex-grow">ساخت و تولید تابلوهای فشار ضعیف سیواکن 8PT </p>
                             <div
                                 class="flex justify-between items-center text-sm text-secondary-600 mb-4">
                                 <span>سرویس ۲۵۰۰ آمپر</span>
@@ -642,7 +815,7 @@
                             data-service="custom">
                             <div
                                 class="relative overflow-hidden rounded-lg mb-6">
-                                <img src="../assets/images/apply-bg.jpg"
+                                <img src="../assets/images/sanandaj.webp"
                                     alt="پروژه کارخانه خودروسازی"
                                     class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
                                 <div
@@ -651,8 +824,7 @@
                                     class="absolute top-4 left-4 bg-primary text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">سفارشی</div>
                             </div>
                             <h3
-                                class="text-heading font-sans font-bold text-primary mb-3">کارخانه
-                                خودروسازی</h3>
+                                class="text-heading font-sans font-bold text-primary mb-3">فرودگاه سنندج</h3>
                             <p class="text-secondary-600 mb-4 flex-grow">طراحی و
                                 ساخت تابلوهای کنترل موتور و سوئیچ‌گیر سفارشی
                                 برای خط تولید جدید با قابلیت‌های مانیتورینگ
@@ -694,19 +866,16 @@
                                 data-service="custom">
                                 <div
                                     class="relative overflow-hidden rounded-lg mb-6">
-                                    <img src="../assets/images/apply-bg.jpg"
+                                    <img src="../assets/images/kashan.webp"
                                         alt="پروژه مرکز داده"
                                         class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
                                     <div
-                                        class="absolute top-4 right-4 bg-secondary text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">مرکز
-                                        داده</div>
+                                        class="absolute top-4 right-4 bg-secondary text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">نیروگاهی</div>
                                     <div
-                                        class="absolute top-4 left-4 bg-success text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">Tier
-                                        III</div>
+                                        class="absolute top-4 left-4 bg-success text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">سفارشی</div>
                                 </div>
                                 <h3
-                                    class="text-heading font-sans font-bold text-primary mb-3">ساخت
-                                    مرکز داده Tier III</h3>
+                                    class="text-heading font-sans font-bold text-primary mb-3">نیروگاه کاشان</h3>
                                 <p
                                     class="text-secondary-600 mb-4 flex-grow">سیستم
                                     توزیع برق افزونه (Redundant) با کلیدهای
@@ -749,7 +918,7 @@
                                 data-service="custom">
                                 <div
                                     class="relative overflow-hidden rounded-lg mb-6">
-                                    <img src="../assets/images/jofeir.webp"
+                                    <img src="../assets/images/hamoon.webp"
                                         alt="پروژه کارخانه خودروسازی"
                                         class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
                                     <div
@@ -758,8 +927,7 @@
                                         class="absolute top-4 left-4 bg-primary text-white px-3 py-1 rounded-full text-sm font-sans font-semibold">سفارشی</div>
                                 </div>
                                 <h3
-                                    class="text-heading font-sans font-bold text-primary mb-3">میدان
-                                    نفتی سپهر جفیر</h3>
+                                    class="text-heading font-sans font-bold text-primary mb-3">هامون</h3>
                                 <p
                                     class="text-secondary-600 mb-4 flex-grow">ساخت
                                     و تولید تابلوهای فشار متوسط یونیسیف بیست
