--- a/pages/technical_resources.html
+++ b/pages/technical_resources.html
@@ -5,6 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technical Resources - ElectroPanel Pro | Engineering Guides & CAD Libraries</title>
     <meta name="description" content="Access comprehensive technical resources including engineering guides, CAD libraries, specification sheets, and compliance documentation for electrical panel design and installation." />
+    
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@graph": [
+            {
+                "@type": "WebPage",
+                "@id": "https://electropanelpro.com/pages/technical_resources.html",
+                "url": "https://electropanelpro.com/pages/technical_resources.html",
+                "name": "Technical Resources - ElectroPanel Pro | Engineering Guides & CAD Libraries",
+                "description": "Access comprehensive technical resources including engineering guides, CAD libraries, specification sheets, and compliance documentation for electrical panel design and installation.",
+                "isPartOf": {
+                    "@type": "WebSite",
+                    "@id": "https://electropanelpro.com/#website"
+                },
+                "datePublished": "2024-01-01",
+                "dateModified": "2025-01-20",
+                "breadcrumb": {
+                    "@type": "BreadcrumbList",
+                    "itemListElement": [
+                        {
+                            "@type": "ListItem",
+                            "position": 1,
+                            "name": "خانه",
+                            "item": "https://electropanelpro.com/pages/homepage.html"
+                        },
+                        {
+                            "@type": "ListItem",
+                            "position": 2,
+                            "name": "بلاگ",
+                            "item": "https://electropanelpro.com/pages/technical_resources.html"
+                        }
+                    ]
+                }
+            },
+            {
+                "@type": "ItemList",
+                "@id": "https://electropanelpro.com/pages/technical_resources.html#technical-tools",
+                "name": "Technical Tools and Resources",
+                "description": "Collection of technical tools and resources for electrical panel design",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Panel Sizing Calculator",
+                        "description": "Interactive tool for calculating optimal panel size based on load requirements"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Engineering Guides",
+                        "description": "Comprehensive engineering documentation and best practices"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 3,
+                        "name": "CAD Libraries",
+                        "description": "Technical CAD files and specification sheets for electrical components"
+                    }
+                ]
+            }
+        ]
+    }
+    </script>
     <link rel="stylesheet" href="../css/main.css" />
 <script type="module" src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Felectropan3871back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script>
 </head>
